add constants for common emi values